--- a/Filter-achilles.Rmd
+++ b/Filter-achilles.Rmd
@@ -5,8 +5,6 @@ date: "`r Sys.Date()`"
 output: html_document
 ---
 
-# Filtering workflow for achilles data
-
 This workflow follows the seurat qc-1 pipeline.
 
 The main steps are as follows:  
@@ -20,9 +18,14 @@ The main steps are as follows:
 * Denoise PCA
 * Save SCE and Seurat Objects
 
+See /project/tendonhca/ccohen/git/achilles/docs/Filter-achilles.Rmd
+
+
+
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+#set default to not print code and alter figure dimensions
+knitr::opts_chunk$set(echo = FALSE, fig.width=10, fig.height=16)
 
 #set the directory for knitting
 knitr::opts_knit$set(root.dir ="/project/tendonhca/ccohen/chromium/analysis/20230118_achilles")
@@ -44,9 +47,9 @@ library(scran)
 
 ## Read in SingleCellExperiment objects
 
-```{r, echo=FALSE}
+```{r}
 #make a list of unfiltered sample files
-file_list <- list.files("RDS_objects.dir", pattern="_raw_unfiltered_SingleCellExp.rds")
+file_list <- list.files("RDS_objects.dir/unfiltered", pattern="_raw_unfiltered_SingleCellExp.rds")
 
 #Make a new list for the sce objects
 sce <- list()
@@ -54,13 +57,13 @@ sce <- list()
 # generate a list of sce objects
 for (i in 1:length(file_list)){
     
-    sce[[i]] <- readRDS(paste0("RDS_objects.dir/", file_list[i]))
+    sce[[i]] <- readRDS(paste0("RDS_objects.dir/unfiltered/", file_list[i]))
     
 }
 
 
 #make a list of  sample files with empty drops removed
-file_list <- list.files("RDS_objects.dir/", pattern="empty_SingleCellExp.rds")
+file_list <- list.files("RDS_objects.dir/unfiltered/", pattern="empty_SingleCellExp.rds")
 
 #Make a new list for the sce objects
 sce_empty <- list()
@@ -68,7 +71,7 @@ sce_empty <- list()
 # generate a list of sce objects
 for (i in 1:length(file_list)){
     
-    sce_empty[[i]] <- readRDS(paste0("RDS_objects.dir/", file_list[i]))
+    sce_empty[[i]] <- readRDS(paste0("RDS_objects.dir/unfiltered/", file_list[i]))
     
 }
 
@@ -83,7 +86,7 @@ for (i in 1:length(file_list)){
 What is the library profile of empty drops?
 
 
-```{r, echo = FALSE, fig.height=12}
+```{r, warning=FALSE}
 
 project_title <- list()
 plot_list <- list()
@@ -124,7 +127,7 @@ ggsave("Filtered_Figures.dir/EmptyDrops_libsize.pdf", p, device = "pdf", width =
 
 What is the distribution of empty droplets by library size and number of features?
 
-```{r, fig.height=12, echo=FALSE, message=FALSE}
+```{r, fig.height=20, fig.width=14, message=FALSE, warning = FALSE}
 plot_list <- list()
 
 for (i in 1:length(sce_empty)){
@@ -165,7 +168,7 @@ ggsave("Filtered_Figures.dir/EmptyDrops_distribution.pdf", p, device = "pdf", wi
 
 How does removal of empty droplets alter library size?
 
-```{r, echo=FALSE, fig.height=12}
+```{r}
 
 
 #create a df of number of cells per sample
@@ -193,7 +196,9 @@ p <- ggplot(df, aes(x = filter, y = number_of_cells, fill = filter))+
     geom_text(aes(label=number_of_cells), position=position_dodge(width=0.9), vjust=-0.25)+
     facet_wrap("sample", ncol = 3)+
     scale_fill_viridis_d(begin = 0, end = 0.75)+
-    theme_cowplot()
+    theme_cowplot()+
+    theme(legend.position="none")+
+    theme(axis.text.x = element_text(angle = 45, hjust=1))
     
     
 p
@@ -215,6 +220,9 @@ OMB1284-Ach-MB and OMB1284-Ach-MTJ have very low cell numbers (58 and 164 respec
 
 
 ```{r}
+cat("Files list before sample removal")
+cat ("\n")
+
 file_list
 
 sce <- sce[c(-10, -11)]
@@ -222,6 +230,10 @@ sce_empty <- sce_empty[c(-10, -11)]
 file_list <-  file_list[c(-10, -11)]
 project_title <- project_title[c(-10, -11)]
 
+cat ("\n")
+cat("Files list after sample removal")
+cat ("\n")
+file_list
 
 ```
 ### Ambient RNA
@@ -230,7 +242,7 @@ Remove ambient RNA with decontX contamination score > 0.75 and save as new objec
 
 Visualise the results of ambient RNA removal.
 
-```{r, echo = FALSE, fig.height = 16}
+```{r, fig.width=12, fig.height=32, message = FALSE}
 
 
 plot_list <- list()
@@ -245,9 +257,11 @@ for (i in 1:length(sce_empty)){
     p1 <- plotReducedDim(sce_empty[[i]], dimred = "decontX_UMAP", colour_by = "decontX_clusters")+
         ggtitle("decontX clusters")
     p2 <- plotReducedDim(sce_empty[[i]], dimred = "decontX_UMAP", colour_by = "decontX_contamination")+
-        ggtitle("Ambient RNA detection")
+        ggtitle("Ambient RNA detection")+
+        scale_colour_gradientn(colours = viridis(256, option = "D"), limits=c(0, 1), name = "decontX score")
     p3 <- plotReducedDim(sce_decontX_filter[[i]], dimred = "decontX_UMAP", colour_by = "decontX_contamination")+
-        ggtitle("Ambient RNA removal")
+        ggtitle("Ambient RNA removal")+
+        scale_colour_gradientn(colours = viridis(256, option = "D"), limits=c(0, 1), name = "decontX score")
     
     title <- ggdraw() + draw_label(project_title[[i]], fontface='bold', size = 12)
     p3 <- plot_grid(p1, p2, p3, nrow = 1)
@@ -260,13 +274,12 @@ for (i in 1:length(sce_empty)){
 #add an overall title and arrange the graphs on one page
 title <- ggdraw() + draw_label("Ambient RNA contamination", fontface='bold', size = 24)
 p <- plot_grid(plotlist = plot_list, label_size = 24, ncol = 1)
-p <- plot_grid(title, p, ncol=1, rel_heights=c(0.1, 1))
+p <- plot_grid(title, p, ncol=1, rel_heights=c(0.05, 1))
 
 p
 
 
 ```
-
 
 ```{r, include=FALSE}
 #save the plot
@@ -281,7 +294,7 @@ ggsave("Filtered_Figures.dir/Ambient_RNA.pdf", p, device = "pdf", width = 12, he
 
 Plot the library size of singlets vs doublets
 
-```{r, echo = FALSE, fig.height=12}
+```{r}
 plot_list <- list()
 
 for (i in 1:length(sce_empty)){
@@ -295,7 +308,8 @@ for (i in 1:length(sce_empty)){
             geom_jitter(width = 0.1, height = 0) +
             scale_y_continuous(trans = "log10") +
             cowplot::theme_cowplot()+
-            ggtitle(project_title[[i]])
+            ggtitle(project_title[[i]])+
+            theme(axis.title.x = element_blank())
 }
 
 
@@ -335,13 +349,13 @@ for (i in 1:length(sce_empty)){
 
 How many cells were removed at each step?
 
-sce  |   original object
-sce_empty | empty droplets removed, ambient RNA identified, doublets identified
-sce_decontX_filtered | ambient RNA removed
-sce_doublet_filtered | doublets removed
-sce_doublet_decontX_filtered | ambient RNA and doublets removed
+sce: original object  
+sce_empty: empty droplets removed, ambient RNA identified, doublets identified  
+sce_decontX_filtered: ambient RNA removed  
+sce_doublet_filtered: doublets removed  
+sce_doublet_decontX_filtered: ambient RNA and doublets removed  
 
-```{r, echo = FALSE, fig.height=12}
+```{r}
 
 df <- data.frame()
 for (i in 1:length(sce)){
@@ -371,7 +385,8 @@ p <- ggplot(df, aes(x = filter, y = number_of_cells, fill = filter))+
     facet_wrap("sample", ncol = 3)+
     theme_cowplot()+
     theme(axis.text.x = element_text(angle = 45, hjust=1))+
-    scale_fill_viridis_d()
+    scale_fill_viridis_d()+
+    theme(legend.position="none")
     
     
 p
@@ -428,7 +443,7 @@ Plot the number of features per cell (nFeature_RNA) with low number of features.
 Plot the mitochondrial content (percent_mt) with high percent mt. 
 Plot the number of counts vs number of features with recommended discarded cells.
 
-```{r, fig.height=20, echo=FALSE, message=FALSE, warning = FALSE}
+```{r, fig.width = 8, fig.height=48, message=FALSE, warning = FALSE}
 plot_list <- list()
 
 for (i in 1:length(sce_empty)){
@@ -470,7 +485,7 @@ for (i in 1:length(sce_empty)){
         scale_y_log10()+
         theme_cowplot()
     
-    p5 <- plot_grid(p1, p2, p3, p4, nrow = 1)
+    p5 <- plot_grid(p1, p2, p3, p4, nrow = 2)
     
     title <- ggdraw() + draw_label(paste0(project_title[[i]], " empty drops removed"), fontface='bold', size = 16)
     plot_list[[i]] <- plot_grid(title, p5, ncol=1, rel_heights=c(0.1, 1))
@@ -480,7 +495,7 @@ for (i in 1:length(sce_empty)){
 #add an overall title and arrange the graphs on one page
 title <- ggdraw() + draw_label("Statistical outliers", fontface='bold', size = 24)
 p <- plot_grid(plotlist = plot_list, label_size = 24, ncol = 1)
-p <- plot_grid(title, p, ncol=1, rel_heights=c(0.1, 1))
+p <- plot_grid(title, p, ncol=1, rel_heights=c(0.05, 1))
 
 p
 
@@ -505,7 +520,7 @@ Plot the mitochondrial content (percent_mt) with high percent mt.
 Plot the number of counts vs number of features with recommended discarded cells.
 
 
-```{r, fig.height=20, echo=FALSE, message=FALSE, warning = FALSE}
+```{r, fig.width = 14, fig.height=24, message=FALSE, warning = FALSE}
 plot_list <- list()
 
 for (i in 1:length(sce_decontX_doublet_filtered)){
@@ -557,7 +572,7 @@ for (i in 1:length(sce_decontX_doublet_filtered)){
 #add an overall title and arrange the graphs on one page
 title <- ggdraw() + draw_label("Statistical outliers after ambient RNA and doublet removal", fontface='bold', size = 24)
 p <- plot_grid(plotlist = plot_list, label_size = 24, ncol = 1)
-p <- plot_grid(title, p, ncol=1, rel_heights=c(0.1, 1))
+p <- plot_grid(title, p, ncol=1, rel_heights=c(0.05, 1))
 
 p
 
@@ -583,7 +598,7 @@ Note: May want to create other objects here according to which filters should be
 Note: An important thing to note is that, now that we have filtered this object, some of the QC metrics that were calculated across all genes (for colData) and across all cells (for rowData) are no longer correct for the filtered data set. We need to remove them, and if necessary recalculate them.
 
 
-```{r, echo = FALSE}
+```{r}
 
 sce_decontX_doublet_discard_filtered <- list()
 sce_decontX_doublet_low_filtered <- list()
@@ -608,7 +623,7 @@ for (i in 1:length(sce_decontX_doublet_filtered)){
 Visualise how these filters affect the library size. 
 
 
-```{r, echo=FALSE, fig.height=12}
+```{r}
 
 
 #create a df of number of cells per sample
@@ -640,7 +655,9 @@ p <- ggplot(df, aes(x = filter, y = number_of_cells, fill = filter))+
     geom_text(aes(label=number_of_cells), position=position_dodge(width=0.9), vjust=-0.25)+
     facet_wrap("sample", ncol = 3)+
     scale_fill_viridis_d(begin = 0, end = 0.75)+
-    theme_cowplot()
+    theme_cowplot()+
+    theme(legend.position = "none")+
+    theme(axis.text.x = element_text(angle = 45, hjust=1))
     
     
 p
@@ -657,7 +674,7 @@ ggsave("Filtered_Figures.dir/Discard_cellnumber.pdf", p, device = "pdf", width =
 
 How does filtering alter the novelty?
 
-```{r, echo=FALSE, fig.height=10}
+```{r}
 
 plot_list <- list()
 for (i in 1:length(sce_empty)) {
@@ -746,7 +763,7 @@ total = Mean of total gene expression
 bio = Mean of gene expression from biological variance 
 tech = Mean of gene expression from technical variance
 
-```{r, echo = FALSE, fig.height=20}
+```{r, echo = FALSE, fig.width = 8, fig.height=28}
 plot_list <-list()
 
 for (i in 1:length(sce_empty)){
@@ -780,7 +797,7 @@ for (i in 1:length(sce_empty)){
 #add an overall title and arrange the graphs on one page
 title <- ggdraw() + draw_label("Highly Variable Genes", fontface='bold', size = 24)
 p <- plot_grid(plotlist = plot_list, label_size = 24, ncol = 1)
-p <- plot_grid(title, p, ncol=1, rel_heights=c(0.1, 1))
+p <- plot_grid(title, p, ncol=1, rel_heights=c(0.05, 1))
 
 p
 
@@ -806,7 +823,7 @@ Plot PCAs
 - where are the discarded cells?
 Less informative than UMAPs (shown below)
 
-```{r, eval = FALSE, include = FALSE, fig.height=20}
+```{r, include = FALSE, fig.height=20}
 
 plot_list <- list()
 
@@ -830,7 +847,7 @@ for(i in 1:length(sce_empty)){
 #add an overall title and arrange the graphs on one page
 title <- ggdraw() + draw_label("Doublets and Statistical outliers", fontface='bold', size = 24)
 p <- plot_grid(plotlist = plot_list, label_size = 24, ncol = 1)
-p <- plot_grid(title, p, ncol=1, rel_heights=c(0.1, 1))
+p <- plot_grid(title, p, ncol=1, rel_heights=c(0.05, 1))
 
 p
 
@@ -848,7 +865,7 @@ Plot UMAPs
 - where are the doublets?
 - where are the discarded cells?
 
-```{r, echo=FALSE, warning=FALSE, message = FALSE, fig.height=20}
+```{r, warning=FALSE, message = FALSE, fig.width = 12, fig.height=28}
 
 plot_list <- list()
 
@@ -876,7 +893,7 @@ for(i in 1:length(sce_empty)){
 #add an overall title and arrange the graphs on one page
 title <- ggdraw() + draw_label("Doublets and Statistical outliers", fontface='bold', size = 24)
 p <- plot_grid(plotlist = plot_list, label_size = 24, ncol = 1)
-p <- plot_grid(title, p, ncol=1, rel_heights=c(0.1, 1))
+p <- plot_grid(title, p, ncol=1, rel_heights=c(0.05, 1))
 
 p
 
@@ -894,8 +911,6 @@ ggsave("Filtered_Figures.dir/Outliers_UMAP.pdf", p, device = "pdf", width = 12, 
 
 Perform PCA and UMAP on filtered object with all cells marked "discard" removed. 
 
-Perform denoise to calculate which PCs are due to technical noise
-
 So first do the same steps as above.
 - log normalise the counts
 - calculate the top variable genes & visualise
@@ -903,35 +918,35 @@ So first do the same steps as above.
 - perform UMAP & visualise
 
 
-```{r, echo = FALSE, message=FALSE}
+```{r, message=FALSE}
 dec_filtered <- list()
 hvg_filtered <- list()
 
 for (i in 1:length(sce_decontX_doublet_discard_filtered)){
     
-    cat (paste0("analysing sample ", i))
-    cat("\n")
-    cat("og normalise the counts")
-    cat("\n")
+    #cat (paste0("analysing sample ", i))
+    #cat("\n")
+    #cat("og normalise the counts")
+    #cat("\n")
     
     # log normalise the counts
     sce_decontX_doublet_discard_filtered[[i]] <- scuttle::logNormCounts(sce_decontX_doublet_discard_filtered[[i]])
     
-    cat("calculate the top variable genes")
-    cat("\n")
+    #cat("calculate the top variable genes")
+    #cat("\n")
     
     # calculate the top variable genes
     dec_filtered[[i]] <- scran::modelGeneVar(sce_decontX_doublet_discard_filtered[[i]])
     hvg_filtered[[i]] <- scran::getTopHVGs(dec_filtered[[i]], prop=0.1)
     
-    cat("perform PCA")
-    cat("\n")
+    #cat("perform PCA")
+    #cat("\n")
     
     # perform PCA
     sce_decontX_doublet_discard_filtered[[i]] <- scater::runPCA(sce_decontX_doublet_discard_filtered[[i]],
                                                                 subset_row=hvg_filtered[[i]])
-    cat("perform UMAP")
-    cat("\n")
+    #cat("perform UMAP")
+    #cat("\n")
     
     # perform UMAP
     sce_decontX_doublet_discard_filtered[[i]] <- scater::runUMAP(sce_decontX_doublet_discard_filtered[[i]], 
@@ -945,7 +960,7 @@ for (i in 1:length(sce_decontX_doublet_discard_filtered)){
 - Visualise the relation between the mean expression of each gene and the total / biological / technical variance of each gene.
 - Plot the highly variable genes
 
-```{r, fig.height = 12}
+```{r, fig.width = 8, fig.height=28}
 
 plot_list <-list()
 
@@ -979,9 +994,9 @@ for (i in 1:length(sce_decontX_doublet_discard_filtered)){
 
 
 #add an overall title and arrange the graphs on one page
-title <- ggdraw() + draw_label("Highly Variable Genes", fontface='bold', size = 24)
-p <- plot_grid(plotlist = plot_list, label_size = 24, ncol = 2)
-p <- plot_grid(title, p, ncol=1, rel_heights=c(0.1, 1))
+title <- ggdraw() + draw_label("Highly Variable Genes (filtered)", fontface='bold', size = 24)
+p <- plot_grid(plotlist = plot_list, label_size = 24, ncol = 1)
+p <- plot_grid(title, p, ncol=1, rel_heights=c(0.05, 1))
 
 p
     
@@ -997,79 +1012,6 @@ ggsave("Filtered_Figures.dir/Highly_variable_genes_filtered.pdf", p, device = "p
 ```
 
 
-Perform denoise on the filtered object, then recalculate the UMAP on the reduced number of PCs. 
-
-```{r, echo = FALSE}
-sce_decontX_doublet_discard_filtered_denoise <- list()
-df <- data.frame()
-
-for (i in 1:length(sce_decontX_doublet_discard_filtered)){
-    
-    sce_decontX_doublet_discard_filtered_denoise[[i]] <-
-        scran::denoisePCA(sce_decontX_doublet_discard_filtered[[i]],
-                          dec_filtered[[i]], 
-                          subset.row=hvg_filtered[[i]])
-    
-    sample <- project_title[[i]]
-    denoise_PCs <- ncol(reducedDim(sce_decontX_doublet_discard_filtered_denoise[[i]], "PCA"))
-    
-    df[i,1] <- sample
-    df[i, 2] <- denoise_PCs
-    
-    sce_decontX_doublet_discard_filtered_denoise[[i]] <- scater::runUMAP(sce_decontX_doublet_discard_filtered_denoise[[i]], 
-                                                                 dimred = 'PCA', 
-                                                                 pca = denoise_PCs,
-                                                                 external_neighbors=TRUE)
-    
-}
-    
-colnames(df) <- c("sample", "number of PCs")
-
-write.table (df, "Files/denoise_PCs.txt", row.names = FALSE, sep = "\t")
-
-df
-
-```
-
-Plot the UMAPs side by side, with and without denoise.
-
-```{r, fig.height = 12, message = FALSE}
-plot_list <- list()
-
-for (i in 1:length(sce_decontX_doublet_discard_filtered)){
-    
-    p1 <- plotReducedDim(sce_decontX_doublet_discard_filtered[[i]], dimred = "UMAP", colour_by = "sex")+
-        scale_colour_viridis_d(begin = 0, end = 0.75)+
-        ggtitle("Before denoise")+
-        theme(legend.position="none")
-    
-    p2 <- plotReducedDim(sce_decontX_doublet_discard_filtered_denoise[[i]], dimred = "UMAP", colour_by = "sex")+
-        scale_colour_viridis_d(begin = 0, end = 0.75)+
-        ggtitle("After denoise")+
-        theme(legend.position="none")
-
-        p3 <- plot_grid(p1, p2, nrow = 1)
-    title <- ggdraw() + draw_label(project_title[[i]], fontface='bold', size = 16)
-    plot_list[[i]] <- plot_grid(title, p3, ncol=1, rel_heights=c(0.1, 1))
-}
-
-
-#add an overall title and arrange the graphs on one page
-title <- ggdraw() + draw_label("Denoise PCA", fontface='bold', size = 24)
-p <- plot_grid(plotlist = plot_list, label_size = 24, ncol = 2)
-p <- plot_grid(title, p, ncol=1, rel_heights=c(0.1, 1))
-
-p
-    
-
-
-```
-
-```{r, include=FALSE}
-#save the plot
-ggsave("Filtered_Figures.dir/Denoise_UMAP.png", p, device = "png", width = 10, height = 14, bg = "white")
-ggsave("Filtered_Figures.dir/Denoise_UMAP.pdf", p, device = "pdf", width = 12, height = 24, bg = "white")
-```
 
 
 
@@ -1079,7 +1021,9 @@ For each level of filtering:
 Save as a SingleCellExperiment and save with suffix "_SingleCellExp.rds"
 Convert to a Seurat Object and save with suffix "_SeuratObject.rds".  
 
-```{r, echo=FALSE, warning=FALSE}
+```{r}
+
+dir.create ("RDS_objects.dir/filtered")
 
 so <- list()
 
@@ -1089,31 +1033,35 @@ for(i in 1:length(sce_empty)){
     
     # empty drops removed
     saveRDS(sce_empty[[i]], 
-            paste0("RDS_objects.dir/", project_title[[i]], "_empty_SingleCellExp.rds"))
+            paste0("RDS_objects.dir/filtered/", project_title[[i]], "_empty_SingleCellExp.rds"))
     
     # ambient RNA and doublets removed
     saveRDS(sce_decontX_doublet_filtered[[i]], 
-            paste0("RDS_objects.dir/", project_title[[i]], "_decontX_doublet_filtered_SingleCellExp.rds"))
+            paste0("RDS_objects.dir/filtered/", project_title[[i]], "_decontX_doublet_filtered_SingleCellExp.rds"))
     
     # ambient RNA and doublets removed, low nCount and nFeature removed
     saveRDS(sce_decontX_doublet_low_filtered[[i]], 
-            paste0("RDS_objects.dir/", project_title[[i]], "_decontX_doublet_low_filtered_SingleCellExp.rds"))
+            paste0("RDS_objects.dir/filtered/", project_title[[i]], "_decontX_doublet_low_filtered_SingleCellExp.rds"))
     
     # ambient RNA and doublets removed, low nCount and nFeature removed, high mitochondrial reads removed
     saveRDS(sce_decontX_doublet_discard_filtered[[i]], 
-            paste0("RDS_objects.dir/", project_title[[i]], "_decontX_doublet_discard_filtered_SingleCellExp.rds"))
-    
-    # ambient RNA and doublets removed, low nCount and nFeature removed, high mitochondrial reads removed, denoise performed
-    saveRDS(sce_decontX_doublet_discard_filtered_denoise[[i]], 
-            paste0("RDS_objects.dir/", project_title[[i]], "_decontX_doublet_discard_filtered_denoise_SingleCellExp.rds"))
+            paste0("RDS_objects.dir/filtered/", project_title[[i]], "_decontX_doublet_discard_filtered_SingleCellExp.rds"))
     
     
     # convert to Seurat Object and save (filtered only)
-    so[[i]] <- as.Seurat(sce_decontX_doublet_discard_filtered_denoise[[i]], 
+    so[[i]] <- as.Seurat(sce_decontX_doublet_discard_filtered[[i]], 
                          project = project_title[[i]])
     saveRDS(so[[i]], 
-            paste0("RDS_objects.dir/", project_title[[i]], "_decontX_doublet_discard_filtered_denoise_SeuratObject.rds"))
+            paste0("RDS_objects.dir/filtered/", project_title[[i]], "_decontX_doublet_discard_filtered_SeuratObject.rds"))
 
 }
 
 ```
+
+
+Save the workspace
+
+```{r}
+save.image (file = "Filter-achilles.RData")
+```
+
