local updates to Cluster-achilles

--- a/Cluster-achilles.Rmd
+++ b/Cluster-achilles.Rmd
@@ -5,27 +5,51 @@ date: "`r Sys.Date()`"
 output: html_document
 ---
 
-Read in filtered RDS objects
-Perform PCA & visualise
-Perform clustering & visualise
+
+Steps in the workflow  
+*  Read in filtered RDS objects  
+*  Compare SCTransfrom v1 and v2
+  *  Normalise using SCTransform
+  *  Perform PCA, UMAP and clustering  
+  *  Convert EnsemblIDs to gene names in SCT assay
+  *  Visualise variable genes, Elbow Plot and UMAPs
+  
+
 
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = FALSE) #set optimal fig.width and fig.height here
 
 library(tidyverse)
 library(Seurat)
-library(biomaRt)
+#library(biomaRt)
 library(scater)
+library(cowplot)
+library("glmGamPoi")
 
 ```
 
-Read in RDS files after filtering
+## Import the data
 
+Read in RDS files after filtering
+Remove some samples due to them failing QC
+OMB1250-Ach-MB2
+OMB1284 all samples
 
 ```{r, echo=FALSE}
 #make a list of sample files
-file_list <- list.files("RDS_objects_test.dir/", pattern="_filtered_SeuratObject.rds")
+file_list <- list.files("C:/Users/wolf1241/OneDrive - Nexus365/scflow/20230118_achilles/RDS_objects.dir/filtered", 
+                        pattern=".rds")
+
+cat ("File list before sample removal")
+cat ("\n")
+file_list
+
+file_list <- file_list[c(-7, -9)]
+
+cat ("File list after sample removal")
+cat ("\n")
+file_list
 
 #Make a new list for the seurat objects
 so <- list()
@@ -33,39 +57,194 @@ so <- list()
 # generate a list of Seurat objects
 for (i in 1:length(file_list)){
     
-    so[[i]] <- readRDS(paste0("RDS_objects_test.dir/", file_list[i]))
-    
+    so[[i]] <- readRDS(paste0("C:/Users/wolf1241/OneDrive - Nexus365/scflow/20230118_achilles/RDS_objects.dir/filtered/", file_list[i]))
+    #set the project name (should be done in filtering workflow)
+    so[[i]]@project.name <- str_replace(file_list[[i]], "_decontX_doublet_discard_filtered_SeuratObject.rds", "")
 }
 
 ```
 
 
+## Compare SCTransform with SCTransform v 2
+
 Perform SCTransform
+Perform the downstream steps with default parameters and using 30 PCs (this will be optimised later)
 
 ```{r}
 
-for (i in 1:length(file_list)){
+for (i in 1:length(so)){
     
     so[[i]] <- SCTransform(so[[i]],
-                           vars.to.regress = "percent_mt")
-    }
-
-```
-Have  alook a the SCTransform output
-
-```{r, eval = FALSE, echo=FALSE}
-
-for (i in 1:length(file_list)){
-    print(so[[i]])
-    print(so[[i]][[]] %>% head()) #should see new columns in metadata
-    print(dim(so[[i]]$RNA))
-    print(dim(so[[i]]$SCT))
+                           method = "glmGamPoi", #added to increase efficiency
+                           vars.to.regress = "percent_mt") %>% 
+      RunPCA() %>% #add reduction.name = "sct.pca" (currently "pca")
+      FindNeighbors(dims = 1:30) %>%
+      RunUMAP(dims = 1:30) %>% # add reduction.name = "sct.umap" (currently "umap")
+      FindClusters()
     
     }
 
+```
+
+
+Plot the variable features following SCTransform
+
+
+```{r, fig.width=8, message=FALSE}
+plot_list <- list()
+
+for (i in 1:length(so)){
+    
+    plot_list[[i]] <- VariableFeaturePlot(so[[i]])+
+      scale_colour_viridis_d(begin = 0, end = 0.75)+
+      ggtitle(so[[i]]@project.name)
+  
+}
+
+title <- ggdraw() + draw_label("Variable genes following SCT", fontface='bold', size = 24)
+p <- plot_grid(plotlist = plot_list, label_size = 12, ncol = 2)
+p <- plot_grid(title, p, ncol=1, rel_heights=c(0.1, 1))
+
+p
 
 
 ```
+
+Plot ElbowPlot
+
+```{r, fig.width=10, message=FALSE}
+plot_list <- list()
+
+for (i in 1:length(so)){
+    
+    plot_list[[i]] <- ElbowPlot(so[[i]], ndims = 50)+
+      ggtitle(so[[i]]@project.name)
+  
+}
+
+title <- ggdraw() + draw_label("Elbow Plot following SCT", fontface='bold', size = 24)
+p <- plot_grid(plotlist = plot_list, label_size = 12, ncol = 2)
+p <- plot_grid(title, p, ncol=1, rel_heights=c(0.1, 1))
+
+p
+
+
+```
+
+
+Plot UMAP with clustering
+
+```{r, fig.width=10, message=FALSE}
+plot_list <- list()
+
+for (i in 1:length(so)){
+    
+    plot_list[[i]] <- DimPlot(so[[i]], reduction = "umap")+
+      ggtitle(so[[i]]@project.name)
+  
+}
+
+title <- ggdraw() + draw_label("Clustering following SCT", fontface='bold', size = 24)
+p <- plot_grid(plotlist = plot_list, label_size = 12, ncol = 2)
+p <- plot_grid(title, p, ncol=1, rel_heights=c(0.1, 1))
+
+p
+
+
+```
+Plot UMAP with mitochondrial content 
+## not working ##
+
+```{r, fig.width=10, message=FALSE}
+plot_list <- list()
+
+for (i in 1:length(so)){
+    
+    plot_list[[i]] <- DimPlot(so[[i]], reduction = "umap", group.by = "percent_mt")+
+      ggtitle(so[[i]]@project.name)
+  
+}
+
+title <- ggdraw() + draw_label("Clustering following SCT", fontface='bold', size = 24)
+p <- plot_grid(plotlist = plot_list, label_size = 12, ncol = 2)
+p <- plot_grid(title, p, ncol=1, rel_heights=c(0.1, 1))
+
+p
+
+
+```
+
+
+Convert rownames of SCT assay data slot to unique names
+
+
+```{r}
+#temporarily create a new list
+so_test <- so
+
+for (i in 1:length(so_test)){
+  
+  df <- left_join(data.frame("ensembl_gene_id" = rownames(so_test[[i]]@assays$SCT@data)), so_test[[i]]@assays$RNA@meta.features)
+  
+  rownames(so_test[[i]]@assays$SCT@data) <- df$unique_name
+  rownames(so_test[[i]]@assays$SCT@counts) <- df$unique_name
+
+}
+
+```
+
+
+### Get the top 10 variable genes
+
+```{r}
+top10 <- list()
+
+for (i in 1:length(so_test)){
+
+  top10[[i]] <- data.frame("ensembl_gene_id" = VariableFeatures(so_test[[i]])[1:10]) %>% 
+    left_join(so_test[[i]]@assays$RNA@meta.features)
+}
+
+```
+
+
+Plot the top 10 variable genes on a Vln plot
+
+```{r}
+#Create a list of project names
+
+project_names <- list()
+
+for (i in 1:length(so_test)){
+  project_names[[i]] <- so[[i]]@project.name
+}
+
+```
+
+
+```{r, fig.width=12, fig.height=10}
+
+plot_list <- list()
+
+#str_replace(file_list[[i]], "_decontX_doublet_discard_filtered_SeuratObject.rds", "")
+
+for (i in 1:length(so_test)){
+  
+  plot_list[[i]] <- VlnPlot(so_test[[i]], features = top10[[i]]$unique_name[1:6]) 
+  
+}
+
+title <- ggdraw() + draw_label("Top six variable genes", fontface='bold', size = 24)
+p <- plot_grid(plotlist = plot_list, labels = project_names, label_size = 14, hjust = 0, vjust = 1, ncol = 1)
+p <- plot_grid(title, p, ncol=1, rel_heights=c(0.1, 1))
+
+p
+
+```
+
+
+Up to here Friday 17th Feb
+
 
 ```{r}
 so[[1]]@assays$RNA@meta.features %>% head()
